# testbed

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  requirements.txt
autojudge/: auto_judge_openrouter.py  score.py
autojudge/system_prompts/: report_judge.txt
configs/: models.example.json
leaderboard/: README.md  leaderboard.csv  leaderboard.json
reports/: README.md
reports/claude-opus-4.7/article_001/: report.html  report.json  target.txt
reports/claude-opus-4.7/article_002/: report.html  report.json
reports/claude-opus-4.7/article_003/: report.html  report.json
reports/claude-opus-4.7/article_004/: report.html  report.json
reports/claude-opus-4.7/article_005/: report.html  report.json
reports/claude-opus-4.7/article_006/: report.html  report.json
reports/claude-opus-4.7/article_007/: report.html  report.json
reports/claude-opus-4.7/article_008/: report.html  report.json
reports/claude-opus-4.7/article_009/: report.html  report.json
reports/claude-opus-4.7/article_010/: report.html  report.json  target.txt
scripts/: audit_session_exposure.py  audit_transcript.py  bootstrap.sh  build_leaderboard.py  check_openrouter_key.sh  clone_skill.sh  collect_skill_report.py  extract_claude_trajectory.py  extract_codex_trajectory.py  import_dragun_package.py  launch.sh  list_topics.py  make_article_input.py  openrouter_direct_report.py  openrouter_service_tier_proxy.py  resolve_skill_command.py  resolve_skill_file.py  resolve_skill_name.py  run_batch.sh  run_one.sh  sanitize_id.py  score_with_autojudge.sh  validate_report.py
(+188 files in other folders)
